--- a/index.html
+++ b/index.html
@@ -132,19 +132,18 @@
 	</section>
 
 	<section id="sec-4" class="mb_4">
-		<div class="container">
+		<div class="container position-relative">
 			<h2>Акции и спецпредложения</h2>
-			<div class="swiper swiper1">
-				<!-- Additional required wrapper -->
+			<div class="swiper-1">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="offer">
 							<img src="img/img1.png" alt="">
 							<div class="text">
-								<div class="font-2 accent-dark f_20 fw_7 mb-2">
+								<div class="title mb-2">
 									<span class="f_12">30%</span> скидка
 								</div>
-								<div class="f_12 fw_5 black">действует в будние дни с 10:00 до 12:00</div>
+								<div class="desc">действует в будние дни с 10:00 до 12:00</div>
 							</div>
 						</div>
 					</div>
@@ -152,10 +151,10 @@
 						<div class="offer">
 							<img src="img/img1.png" alt="">
 							<div class="text">
-								<div class="font-2 accent-dark f_20 fw_7 mb-2">
-									<span class="f_12">30%</span> скидка
+								<div class="title mb-2">
+									<span class="f_12">15%</span> скидка
 								</div>
-								<div class="f_12 fw_5 black">действует в будние дни с 10:00 до 12:00</div>
+								<div class="desc">на стрижку горячими ножницами</div>
 							</div>
 						</div>
 					</div>
@@ -163,17 +162,223 @@
 						<div class="offer">
 							<img src="img/img1.png" alt="">
 							<div class="text">
-								<div class="font-2 accent-dark f_20 fw_7 mb-2">
-									<span class="f_12">30%</span> скидка
+								<div class="title mb-2">
+									<span class="f_12">10%</span> скидка
 								</div>
-								<div class="f_12 fw_5 black">действует в будние дни с 10:00 до 12:00</div>
+								<div class="desc">На услуги вазажиста</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="swiper-pagination"></div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev">
+					<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+						<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+					</svg>
+				</div>
+				<div class="swiper-button-next">
+					<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+						<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+					</svg>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="sec-5" class="mb_4">
+		<div class="container">
+			<h2>Наша команда</h2>
+			<div class="row row-cols-2">
+				<div>
+					<div class="employee">
+						<div class="row row-cols-2">
+							<div>
+								<img src="img/team/3.png" alt="Мария">
+							</div>
+							<div>
+								<div class="f_15 font-2 dark-gray fw_6 mb-1">Мария</div>
+								<div class="f_12 font-2 dark-gray mb-1">Мастер бровист</div>
+								<div class="f_12 font-2 dark-gray">Стаж работы 5 лет</div>
+								<div class="rating mt-4">
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+									<svg class="" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/>
+									</svg>
+								</div>
+								<div class="f_12 font-2 light-gray mt-4">Короткое описание мастера, регалии, сертификаты и предоставляеммые услуги</div>
+							</div>
+							<div class="mt-5">
+								<button type="button" class="btn_main btn_2 mx-auto mt-5">Подробнее</button>
+							</div>
+							<div class="mt-5">
+								<button type="button" class="btn_main btn_1 mx-auto mt-5">Записаться</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="row row-cols-3 gy-5 mb-5">
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/1.png" alt="Альфия" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Альфия</div>
+								<div class="light-gray f_09">Мастер ногтевого сервиса</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/2.png" alt="Ольга" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Ольга</div>
+								<div class="light-gray f_09">Мастер ногтевого сервиса</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview active">
+								<img src="img/team/3.png" alt="Мария" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Мария</div>
+								<div class="light-gray f_09">Мастер бровист</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/4.png" alt="Анастасия" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Анастасия</div>
+								<div class="light-gray f_09">Парикмахер, коллорист</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/5.png" alt="Максим" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Максим</div>
+								<div class="light-gray f_09">Парикмахер</div>
+							</div>
+						</div>
+						<div>
+							<div class="employee-preview">
+								<img src="img/team/6.png" alt="Виктория" class="mb-2">
+								<div class="f_12 dark-gray fw_6 mb-1">Виктория</div>
+								<div class="light-gray f_09">Косметолог</div>
+							</div>
+						</div>
+					</div>
+					<div class="text-center"><a href="#" class="font-2 f_09 fw_6 accent bb_1">Показать всех</a></div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="sec-6" class="mb_4">
+		<h2>Товары</h2>
+		<div class="bg mb-5">
+			<div class="container">
+				<div class="row g-0">
+					<div class="col-3">
+						<div>
+							<nav class="white">
+								<ul>
+									<li><a href="">Уход за волосами</a></li>
+									<li><a href="">Уход за лицом</a></li>
+									<li><a href="">Уход за телом</a></li>
+									<li><a href="">Уход за ногтями</a></li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+					<div class="col-9 py-5">
+						<div class="position-relative px-5">
+							<div class="swiper-2">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="product">
+											<img src="img/product/1.png" alt="" class="mb-4">
+											<div class="text mb-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+											<div class="d-flex justify-content-between align-items-center">
+												<button type="button" class="btn_main f_08 btn_2 px-4 py-2">В корзину</button>
+												<div class="f_13 fw_5">632 ₽</div>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product">
+											<img src="img/product/1.png" alt="" class="mb-4">
+											<div class="text mb-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+											<div class="d-flex justify-content-between align-items-center">
+												<button type="button" class="btn_main f_08 btn_2 px-4 py-2">В корзину</button>
+												<div class="f_13 fw_5">632 ₽</div>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product">
+											<img src="img/product/1.png" alt="" class="mb-4">
+											<div class="text mb-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+											<div class="d-flex justify-content-between align-items-center">
+												<button type="button" class="btn_main f_08 btn_2 px-4 py-2">В корзину</button>
+												<div class="f_13 fw_5">632 ₽</div>
+											</div>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="product">
+											<img src="img/product/1.png" alt="" class="mb-4">
+											<div class="text mb-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+											<div class="d-flex justify-content-between align-items-center">
+												<button type="button" class="btn_main f_08 btn_2 px-4 py-2">В корзину</button>
+												<div class="f_13 fw_5">632 ₽</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-button-prev">
+									<svg viewBox="0 0 24 62" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.1192 58.3865L2 30.6932L21.1192 3"/>
+									</svg>
+								</div>
+								<div class="swiper-button-next">
+									<svg viewBox="0 0 25 62" xmlns="http://www.w3.org/2000/svg">
+										<path d="M3.23486 58.3865L22.354 30.6932L3.23486 3"/>
+									</svg>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<button type="button" class="btn_main btn_1 mx-auto mt-5">Перейти в каталог</button>
+	</section>
+
+	<section id="sec-7" class="py-5">
+		<div class="container">
+			<h2>Контакты</h2>
+			<div class="row justify-content-center">
+				<div class="col-5 font-2 f_12">
+					<div class="fw_7 mb-3">Телефона:</div>
+					<div class="fw_3 mb-1"><a href="tel:+79879878787">+7 (987) 987-87-87</a></div>
+					<div class="fw_3"><a href="tel:+79879876767">+7 (987) 987-67-67</a></div>
+
+					<div class="fw_7 mt-4 mb-3">Время работы:</div>
+					<div class="fw_3">10:00 до 23:00</div>
+
+					<div class="fw_7 mt-4 mb-3">Адрес:</div>
+					<div class="fw_3">г. Казань, ул. Достоевского, д. 45</div>
+					<div class="fw_7 mt-4 mb-3">Вопросы и предложения:</div>
+					<div class="fw_3"><a href="mailto:Status@mail.ru">Status@mail.ru</a></div>
+				</div>
+				<div class="col-5">
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A333ae55c8df85ec553d343e39e2166564c596283050f87f1b530765ad79ec4b3&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -182,7 +387,7 @@
 		<div class="container py-5">
 			<div class="row row-cols-4 justify-content-between">
 				<div>
-					<nav>
+					<nav class="f-menu">
 						<ul>
 							<li><a href="">Стрижки</a></li>
 							<li><a href="">Окрашивание</a></li>
@@ -229,10 +434,20 @@
 						</a>
 					</div>
 				</div>
-				<div>
+				<div class="d-flex flex-column justify-content-between">
+					<div>
+						<div class="d-flex align-items-start f_08 fw_3 mb-3">
+							<img src="img/icons/map-pin.svg" alt="адрес" class="me-2">
+							<div>Мы находимся по адресу:  Казань, Меридианная ул, д. 3, 420124</div>
+						</div>
+						<div class="d-flex align-items-start f_08 fw_3 mb-3">
+							<img src="img/icons/phone.svg" alt="номер телефона" class="me-2">
+							<a href="tel:+7 (987) 987-87-87">+7 (987) 987-87-87</a>
+						</div>
+					</div>
 					<div>
 						<a class="developers" href="http://asmpromo.ru/" alt="Создание и продвижение сайтов" title="Создание и продвижение сайтов" target="_blanc">
-							<div>Создание и продвижение сайтов</div>
+							<div class="f_08">Создание и продвижение сайтов</div>
 							<img src="img/asm_white.png" alt="">
 						</a>
 					</div>
