--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<section id="sec-1" class="mb_4">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-md-6 col-lg-5 col-xl-4">
+				<div class="col-7 col-sm-6 col-lg-5 col-xl-4">
 					<img src="img/logo-dark.svg" alt="Студия красоты Status" class="mb-3">
 					<div class="ps-5">
 						<h1>Студия красоты</h1>
