--- a/index.html
+++ b/index.html
@@ -13,24 +13,21 @@
 	<link rel="stylesheet" href="fonts/stylesheet.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
 	<header>
-		<div class="container py-1 py-md-3">
+		<div class="container py-md-3">
 			<div class="row align-items-center">
 				<div class="col-2 d-block d-lg-none">
 					<button type="button" class="burger" data-bs-toggle="offcanvas" data-bs-target="#burger-menu">
-						<svg viewBox="0 0 33 34" xmlns="http://www.w3.org/2000/svg">
-							<path d="M4.125 17H28.875"/>
-							<path d="M4.125 8.75H28.875"/>
-							<path d="M4.125 25.25H28.875"/>
-						</svg>
+						<i class="fas fa-bars"></i>
 					</button>
 				</div>
 				<div class="col-3 col-md-2">
 					<img src="img/logo-white.svg" alt="Студия красоты" class="logo">
 				</div>
-				<div class="col-5 col-md-6 col-lg-8">
+				<div class="col-4 col-md-6 col-lg-8">
 					<div class="text-end fw_3 mb-lg-2"><a href="tel:+79879877878">+7 (987) 987-78-78</a></div>
 					<nav class="d-none d-lg-block main-menu">
 						<ul>
@@ -43,7 +40,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-2 d-flex justify-content-center">
+				<div class="col-3 col-md-2 d-flex justify-content-center">
 					<button type="button" class="btn-icon">
 						<svg width="40" height="38" viewBox="0 0 40 38" xmlns="http://www.w3.org/2000/svg">
 							<path d="M19.9998 9.35485C21.8332 9.35485 23.3332 10.7581 23.3332 12.4731C23.3332 14.1882 21.8332 15.5914 19.9998 15.5914C18.1665 15.5914 16.6665 14.1882 16.6665 12.4731C16.6665 10.7581 18.1665 9.35485 19.9998 9.35485ZM19.9998 23.3871C24.4998 23.3871 29.6665 25.3984 29.9998 26.5054V28.0645H9.99984V26.521C10.3332 25.3984 15.4998 23.3871 19.9998 23.3871ZM19.9998 6.23657C16.3165 6.23657 13.3332 9.02743 13.3332 12.4731C13.3332 15.9188 16.3165 18.7097 19.9998 18.7097C23.6832 18.7097 26.6665 15.9188 26.6665 12.4731C26.6665 9.02743 23.6832 6.23657 19.9998 6.23657ZM19.9998 20.2688C15.5498 20.2688 6.6665 22.3581 6.6665 26.5054V31.1828H33.3332V26.5054C33.3332 22.3581 24.4498 20.2688 19.9998 20.2688Z"/>
@@ -355,7 +352,7 @@
 
 	<section id="sec-6" class="mb_4">
 		<h2>Товары</h2>
-		<div class="bg mb-5">
+		<div class="bg mb-4 mb-md-5">
 			<div class="container">
 				<div class="row g-0">
 					<div class="col-md-3">
@@ -382,46 +379,46 @@
 							
 						</div>
 					</div>
-					<div class="col-md-9 py-4 py-lg-5">
-						<div class="position-relative px-5">
+					<div class="col-md-9 pt-4 py-sm-4 py-lg-5">
+						<div class="position-relative px-sm-5">
 							<div class="swiper-2">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/1.jpg" alt="" class="mb-4">
-											<div class="text mb-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+											<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
+											<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/2.jpg" alt="" class="mb-4">
-											<div class="text mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
+											<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
+											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/3.jpg" alt="" class="mb-4">
-											<div class="text mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
+											<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
+											<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/4.jpg" alt="" class="mb-4">
-											<div class="text mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
+											<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
+											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
@@ -443,7 +440,7 @@
 				</div>
 			</div>
 		</div>
-		<button type="button" class="btn_main btn_1 mx-auto mt-5"><span class="f_09">Перейти в каталог</span></button>
+		<button type="button" class="btn_main btn_1 mx-auto"><span class="f_09">Перейти в каталог</span></button>
 	</section>
 
 	<section id="sec-7">
@@ -473,7 +470,7 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer class="d-none d-md-block">
 		<div class="container py-5">
 			<div class="row row-cols-3 row-cols-lg-4 justify-content-between">
 				<div>
@@ -548,6 +545,41 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</footer>
+
+	<footer class="mobile">
+		<div class="container h-100 d-flex justify-content-evenly align-items-center">
+			<a href="" class="active">
+				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
+				</svg>
+				<div>Главная</div>									
+			</a>
+			<a href="">
+				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+					<path d="M19.2083 3.87504H15.2025C14.8 2.76337 13.7458 1.95837 12.5 1.95837C11.2542 1.95837 10.2 2.76337 9.7975 3.87504H5.79167C4.7375 3.87504 3.875 4.73754 3.875 5.79171V21.125C3.875 22.1792 4.7375 23.0417 5.79167 23.0417H19.2083C20.2625 23.0417 21.125 22.1792 21.125 21.125V5.79171C21.125 4.73754 20.2625 3.87504 19.2083 3.87504ZM12.5 3.87504C13.0271 3.87504 13.4583 4.30629 13.4583 4.83337C13.4583 5.36046 13.0271 5.79171 12.5 5.79171C11.9729 5.79171 11.5417 5.36046 11.5417 4.83337C11.5417 4.30629 11.9729 3.87504 12.5 3.87504ZM19.2083 21.125H5.79167V5.79171H7.70833V8.66671H17.2917V5.79171H19.2083V21.125Z"/>
+				</svg>
+				<div>Запись</div>				
+			</a>
+			<a href="">
+				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+					<path d="M9.64 7.64C9.87 7.14 10 6.59 10 6C10 3.79 8.21 2 6 2C3.79 2 2 3.79 2 6C2 8.21 3.79 10 6 10C6.59 10 7.14 9.87 7.64 9.64L10 12L7.64 14.36C7.14 14.13 6.59 14 6 14C3.79 14 2 15.79 2 18C2 20.21 3.79 22 6 22C8.21 22 10 20.21 10 18C10 17.41 9.87 16.86 9.64 16.36L12 14L19 21H22V20L9.64 7.64ZM6 8C4.9 8 4 7.11 4 6C4 4.89 4.9 4 6 4C7.1 4 8 4.89 8 6C8 7.11 7.1 8 6 8ZM6 20C4.9 20 4 19.11 4 18C4 16.89 4.9 16 6 16C7.1 16 8 16.89 8 18C8 19.11 7.1 20 6 20ZM12 12.5C11.72 12.5 11.5 12.28 11.5 12C11.5 11.72 11.72 11.5 12 11.5C12.28 11.5 12.5 11.72 12.5 12C12.5 12.28 12.28 12.5 12 12.5ZM19 3L13 9L15 11L22 4V3H19Z"/>
+				</svg>
+				<div>Услуги</div>				
+			</a>
+			<a href="">
+				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+					<path d="M7 8.5H2V6.5H7V8.5ZM7 11.5H2V13.5H7V11.5ZM20.59 18.5L16.76 14.67C15.96 15.19 15.02 15.5 14 15.5C11.24 15.5 9 13.26 9 10.5C9 7.74 11.24 5.5 14 5.5C16.76 5.5 19 7.74 19 10.5C19 11.52 18.69 12.46 18.17 13.25L22 17.09L20.59 18.5ZM17 10.5C17 8.85 15.65 7.5 14 7.5C12.35 7.5 11 8.85 11 10.5C11 12.15 12.35 13.5 14 13.5C15.65 13.5 17 12.15 17 10.5ZM2 18.5H12V16.5H2V18.5Z"/>
+				</svg>
+				<div>Каталог</div>		
+			</a>
+			<a href="">
+				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+					<path d="M19.3333 15.2083C18.1875 15.2083 17.0875 15.025 16.0608 14.6858C15.9692 14.6583 15.8683 14.64 15.7767 14.64C15.5383 14.64 15.3092 14.7317 15.1258 14.9058L13.1092 16.9225C10.515 15.6025 8.38833 13.485 7.06833 10.8908L9.085 8.865C9.34167 8.6175 9.415 8.26 9.31417 7.93917C8.975 6.9125 8.79167 5.8125 8.79167 4.66667C8.79167 4.1625 8.37917 3.75 7.875 3.75H4.66667C4.1625 3.75 3.75 4.1625 3.75 4.66667C3.75 13.2742 10.7258 20.25 19.3333 20.25C19.8375 20.25 20.25 19.8375 20.25 19.3333V16.125C20.25 15.6208 19.8375 15.2083 19.3333 15.2083ZM5.61083 5.58333H6.98583C7.05 6.39 7.1875 7.1875 7.4075 7.9575L6.3075 9.06667C5.93167 7.9575 5.69333 6.79333 5.61083 5.58333ZM18.4167 18.3892C17.2067 18.3067 16.0333 18.0683 14.9333 17.6925L16.0333 16.5925C16.8125 16.8125 17.61 16.95 18.4167 17.005V18.3892ZM12 3.75V12.9167L14.75 10.1667H20.25V3.75H12ZM18.4167 8.33333H13.8333V5.58333H18.4167V8.33333Z"/>
+				</svg>
+				<div>Контакты</div>				
+			</a>
 		</div>
 	</footer>
 
