--- a/index.html
+++ b/index.html
@@ -446,22 +446,25 @@
 	<section id="sec-7">
 		<div class="container">
 			<h2>Контакты</h2>
-			<div class="row justify-content-center">
-				<div class="col-4 col-lg-5 font-2 f_12">
-					<div class="fw_7 mb-3">Телефона:</div>
+			<div class="row gx-2 gx-md-4 justify-content-center">
+				<div class="col-6 col-sm-5 col-md-4 col-lg-5 font-2 f_12">
+					<div class="fw_7 mb-1 mb-sm-3">Телефона:</div>
 					<div class="fw_3 mb-1"><a href="tel:+79879878787">+7 (987) 987-87-87</a></div>
 					<div class="fw_3"><a href="tel:+79879876767">+7 (987) 987-67-67</a></div>
 
-					<div class="fw_7 mt-4 mb-3">Время работы:</div>
+					<div class="fw_7 mt-3 mt-sm-4 mb-1 mb-sm-3">Время работы:</div>
 					<div class="fw_3">10:00 до 23:00</div>
 
-					<div class="fw_7 mt-4 mb-3">Адрес:</div>
+					<div class="fw_7 mt-3 mt-sm-4 mb-1 mb-sm-3">Адрес:</div>
 					<div class="fw_3">г. Казань, ул. Достоевского, д. 45</div>
-					<div class="fw_7 mt-4 mb-3">Вопросы и предложения:</div>
+
+					<div class="fw_7 mt-3 mt-sm-4 mb-1 mb-sm-3">Вопросы и предложения:</div>
 					<div class="fw_3"><a href="mailto:Status@mail.ru">Status@mail.ru</a></div>
 				</div>
-				<div class="col-8 col-lg-7 col-xl-6 col-xxl-5 position-relative">
-					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A333ae55c8df85ec553d343e39e2166564c596283050f87f1b530765ad79ec4b3&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
+				<div class="col-6 col-sm-7 col-md-8 col-lg-7 col-xl-6 col-xxl-5 position-relative">
+					<div id="map">
+						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A333ae55c8df85ec553d343e39e2166564c596283050f87f1b530765ad79ec4b3&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
+					</div>
 					<button class="callback-anim" type="button">
 						<span>Онлайн запись</span>
 					</button>
@@ -549,7 +552,7 @@
 	</footer>
 
 	<footer class="mobile">
-		<div class="container h-100 d-flex justify-content-evenly align-items-center">
+		<div class="container h-100 d-flex justify-content-around align-items-center">
 			<a href="" class="active">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
